onboarding screens apply

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "Senceees"
+        "Onboboarding",
+        "prefs",
+        "Senceees",
+        "sencees"
     ]
 }
