Login validation apply

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "Onboboarding",
         "prefs",
+        "riverpod",
         "Senceees",
-        "sencees"
+        "sencees",
+        "Toastification"
     ]
 }
