--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,13 @@
     "cSpell.words": [
         "datetime",
         "Enviro",
+        "envirosens",
         "Onboboarding",
         "prefs",
         "riverpod",
         "Senceees",
         "sencees",
-        "Toastification"
+        "Toastification",
+        "warnalert"
     ]
 }
