--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   http: ^1.2.1
   toastification: ^2.0.0
   lottie: ^3.1.2
+  langchain: ^0.7.4
+  langchain_openai: ^0.7.0
+  flutter_popup: ^3.3.0
 
 dev_dependencies:
   flutter_test:
