--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   langchain: ^0.7.4
   langchain_openai: ^0.7.0
   flutter_popup: ^3.3.0
+  loading_animation_widget: ^1.2.1
 
 dev_dependencies:
   flutter_test:
