--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   langchain_openai: ^0.7.0
   flutter_popup: ^3.3.0
   loading_animation_widget: ^1.2.1
+  speech_to_text: ^7.0.0
 
 dev_dependencies:
   flutter_test:
