--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   flutter_popup: ^3.3.0
   loading_animation_widget: ^1.2.1
   speech_to_text: ^7.0.0
+  uuid: ^4.5.0
+  flutter_tts: ^4.0.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
