--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,8 @@ dependencies:
   uuid: ^4.5.0
   flutter_tts: ^4.0.2
   permission_handler: ^11.3.1
+  tflite_flutter: ^0.11.0
+  flutter_sound: ^9.12.44
 
 dev_dependencies:
   flutter_test:
@@ -79,6 +81,9 @@ flutter:
     - assets/onboarding/
     - assets/images/
     - assets/lottie/
+    - assets/models/
+    - assets/docs/
+    - assets/audio/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
