--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,8 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.3.4 <4.0.0"
+  sdk: ">=3.3.0 <4.0.0"
+#>=3.3.4 <4.0.0
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -46,6 +47,11 @@ dependencies:
   langchain_openai: ^0.7.0
   flutter_popup: ^3.3.0
   loading_animation_widget: ^1.2.1
+  #new packages - kavindu
+  permission_handler: ^11.3.1
+  flutter_sound: ^9.11.2
+  path_provider: ^2.1.4
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
@@ -75,6 +81,9 @@ flutter:
     - assets/onboarding/
     - assets/images/
     - assets/lottie/
+    # new assets - kavindu
+    - assets/images/background/
+    - assets/gif/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
